--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1"
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.5.5",
     "@types/react": "18.2.21",
+    "eslint": "^8.51.0",
     "jest": "29.6.4",
     "jest-environment-jsdom": "29.6.4",
     "typescript": "5.2.2"
